<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".CrazyThipCalc"
    android:id="@+id/background">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bill_text_view"
        android:id="@+id/billTextView"
        android:password="false"
        android:textSize="30sp"
        android:layout_marginTop="32dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/billEditText"
        android:layout_alignTop="@+id/billTextView"
        android:layout_toRightOf="@+id/billTextView"
        android:layout_toEndOf="@+id/billTextView"
        android:inputType="numberDecimal"
        android:text="@string/bill_edit_text"
        android:ems="5"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip_text_view"
        android:id="@+id/tipTextView"
        android:layout_alignBottom="@+id/billTextView"
        android:layout_toRightOf="@+id/billEditText"
        android:layout_toEndOf="@+id/billEditText"
        android:textSize="30sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tipEditText"
        android:layout_alignTop="@+id/tipTextView"
        android:layout_toRightOf="@+id/tipTextView"
        android:layout_toEndOf="@+id/tipTextView"
        android:text="@string/tip_edit_text"
        android:ems="4"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/final_text_view"
        android:id="@+id/finallTextView"
        android:textSize="30sp"
        android:layout_below="@+id/billEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/finalBillEditText"
        android:ems="5"
        android:text="@string/final_bill_edit_text"
        android:layout_alignTop="@+id/finallTextView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip_text_view"
        android:id="@+id/seekBarView"
        android:textSize="30sp"
        android:layout_below="@+id/finalBillEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar"
        android:progress="15"
        android:layout_below="@+id/seekBarView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/tipEditText"
        android:layout_alignEnd="@+id/tipEditText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_text_view"
        android:id="@+id/introTextView"
        android:layout_below="@+id/seekBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_friendly_view"
        android:id="@+id/friendlyCheckBox"
        android:layout_below="@+id/introTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="15sp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_special_view"
        android:id="@+id/specialCheckBox"
        android:layout_alignTop="@+id/friendlyCheckBox"
        android:layout_toRightOf="@+id/friendlyCheckBox"
        android:layout_toEndOf="@+id/friendlyCheckBox"
        android:textSize="15sp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_opinion_view"
        android:id="@+id/opinionCheckBox"
        android:layout_alignTop="@+id/specialCheckBox"
        android:layout_toRightOf="@+id/specialCheckBox"
        android:layout_toEndOf="@+id/specialCheckBox"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/available_text_view"
        android:id="@+id/availabilityTextView"
        android:layout_below="@+id/friendlyCheckBox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/availabilityTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal"
        android:id="@+id/radioGroup">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/available_bad_radiobutton"
            android:id="@+id/badRadioButton"
            android:textSize="16sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/available_ok_radiobutton"
            android:id="@+id/okRadioButton"
            android:textSize="16sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/available_good_radiobutton"
            android:id="@+id/goodRadioButton"
            android:textSize="16sp" />
    </RadioGroup>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/problemSpinner"
        android:layout_below="@+id/radioGroup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:entries="@array/problem_solving"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_to_waiting_text"
        android:id="@+id/timeForWaitingView"
        android:layout_below="@+id/problemSpinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_chronometer_button"
        android:id="@+id/startButton"
        android:layout_below="@+id/timeForWaitingView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause_chronometer_button"
        android:id="@+id/pauseButton"
        android:layout_below="@+id/timeForWaitingView"
        android:layout_alignLeft="@+id/finalBillEditText"
        android:layout_alignStart="@+id/finalBillEditText" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_chronometer_button"
        android:id="@+id/resetButton"
        android:layout_alignTop="@+id/pauseButton"
        android:layout_toRightOf="@+id/opinionCheckBox"
        android:layout_toEndOf="@+id/opinionCheckBox" />

    <Chronometer
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timeWaitingChronometer"
        android:layout_above="@+id/resetButton"
        android:layout_toRightOf="@+id/opinionCheckBox"
        android:layout_toEndOf="@+id/opinionCheckBox"
        android:textSize="16sp" />

</RelativeLayout>
